@@ -226,6 +226,8 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Let's do battle!"]														= "Let's do battle!"
 	L["I'd like to heal and revive my battle pets."] 							= "I'd like to heal and revive my battle pets."
 	L["A small fee for supplies is required."] 									= "A small fee for supplies is required."
+	L["Let's ride."]															= "Let's ride."
+	L["The forces of Mueh'zala have invaded Ardenweald."]						= "The forces of Mueh'zala have invaded Ardenweald."
 	L["Yes!"]																	= "Yes!"
 	L["Quest"]																	= "Quest"
 	L["I've heard this tale before..."]											= "I've heard this tale before..."
@@ -340,6 +342,8 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Silkstrider Caretaker 1"]												= "You're safe now."
 	L["Lady Moonberry 1"]														= "Lead on."
 	L["Lady Moonberry 2"]														= "Keep us hidden while we search for our friends."
+	L["Dapperdew 1"]															= "If you insist. The show must go on!"
+	L["Cortinarius 1"]															= "Then let us face them."
 	L["Chancellor Codrin 1"]													= "You stand accused of conspiring to overthrow The Countess."
 	L["The Countess 1"]															= "House Darkvein"
 	L["The Countess 2"]															= "<Deliver Prince Renathal's invitation.>"
@@ -362,6 +366,9 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Sparring Aspirant 1"]													= "Will you spar with me?"
 	L["Sparring Aspirant 2"]													= "I would like to challenge both of you to a spar."
 	L["Lord Herne 1"]															= "I will join the hunt, Lord Herne."
+	L["Bwonsamdi 1"]															= "Return me to Ardenweald."
+	L["Winter Queen 1"]															= "I am here on behalf of Bwonsamdi. He needs our help."
+	L["Mask of Bwonsamdi 1"]													= "What will you do about Mueh'zala?"
 	L["Zayhad, The Builder 1"]													= "I'll take this acorn and recover memories within Heartwood Grove."
 	L["Zayhad, The Builder 2"]													= "Here are the joyful memories I collected from Heartwood Grove."
 	L["Taloned Flayedwing 1"]													= "<Ride the flayedwing back to the Wrangler Pit.>"
